added custom 404 page

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
           application. The club also organizes various events and workshops
           related to technology.
         </p>
-        <div class="mt-10 flex justify-center">
+        <!-- <div class="mt-10 flex justify-center">
           <img
             src="https://via.placeholder.com/600x300"
             alt="Club Activity"
             class="rounded-lg shadow-lg"
           />
-        </div>
+        </div> -->
       </div>
     </section>
 
