--- a/members.html
+++ b/members.html
@@ -84,8 +84,8 @@
           class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
         />
         <h3 class="text-xl font-semibold text-blue-700">Dr. Kulvinder Singh Mann</h3>
-        <p class="text-gray-600">Professor & Head - Dept. of IT</p>
-        <p class="text-gray-500 text-sm mt-2">Department of Computer Science</p>
+        <!-- <p class="text-gray-600"></p> -->
+        <p class="text-gray-500 text-sm mt-2">Professor & Head - Dept. of IT</p>
       </div>
 
       <!-- Faculty Card 2 -->
@@ -98,7 +98,7 @@
           class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
         />
         <h3 class="text-xl font-semibold text-blue-700">Er. Harminder Kaur</h3>
-        <p class="text-gray-600">Faculty Mentor</p>
+        <!-- <p class="text-gray-600">Faculty Mentor</p> -->
         <p class="text-gray-500 text-sm mt-2">Faculty Incharge</p>
       </div>
     </div>
