added some events,worked on responsiveness,added some cards of members,worked on path of button

--- a/events.html
+++ b/events.html
@@ -186,6 +186,163 @@
               </p>
             </div>
           </div>
+          <div
+          class="bg-indigo-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+        >
+          <img
+            src="./assets/images/events/webdev-arena.jpg"
+            alt="webdev-arena"
+            class="w-full h-48 object-cover"
+          />
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2 text-indigo-700">
+              WebDev Arena 2025
+            </h3>
+            <p class="text-gray-800">
+              A competition for making a creative UI.
+            </p>
+          </div>
+        </div>
+
+        <div
+        class="bg-emarald-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+      >
+        <img
+          src="./assets/images/events/Git-Sync.jpg"
+          alt="Git-Sync"
+          class="w-full h-48 object-cover"
+        />
+        <div class="p-6">
+          <h3 class="text-xl font-semibold mb-2 text-indigo-700">
+            Git-Sync
+          </h3>
+          <p class="text-gray-800">
+            A seminar for simplifying Version control system.
+          </p>
+        </div>
+      </div>
+
+      <div
+      class="bg-pink-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+    >
+      <img
+        src="./assets/images/events/Freshman-induction.jpg"
+        alt="Freshman-induction"
+        class="w-full h-48 object-cover"
+      />
+      <div class="p-6">
+        <h3 class="text-xl font-semibold mb-2 text-indigo-700">
+          Freshman Induction
+        </h3>
+        <p class="text-gray-800">
+          Learn from industry experts, gain essential skills, and network ✨
+        </p>
+      </div>
+    </div>
+
+    <div
+    class="bg-red-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+  >
+    <img
+      src="./assets/images/events/technomela.jpg"
+      alt="technomela"
+      class="w-full h-48 object-cover"
+    />
+    <div class="p-6">
+      <h3 class="text-xl font-semibold mb-2 text-indigo-700">
+        Hit The Bulls Eye.
+      </h3>
+      <p class="text-gray-800">
+        Sharpen your mind in this thrilling tech quiz with a twist of fun!
+      </p>
+    </div>
+  </div>
+
+  <div
+  class="bg-green-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+>
+  <img
+    src="./assets/images/events/workshop.jpg"
+    alt="workshop-govtjob"
+    class="w-full h-48 object-cover"
+  />
+  <div class="p-6">
+    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
+      Secure Your Dream Govt Job.
+    </h3>
+    <p class="text-gray-800">
+      Govt Job Goals? We’ve Got You Covered!
+    </p>
+  </div>
+</div>
+<div
+  class="bg-blue-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+>
+  <img
+    src="./assets/images/events/workshop-devops.jpg"
+    alt="workshop-devops"
+    class="w-full h-48 object-cover"
+  />
+  <div class="p-6">
+    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
+      DevOPS Workskhop.
+    </h3>
+    <p class="text-gray-800">
+      Learn continuous integration, delivery, and automation to revolutionize software development.
+    </p>
+  </div>
+</div>
+<div
+  class="bg-rose-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+>
+  <img
+    src="./assets/images/events/Alumuni-Sportlight.jpg"
+    alt="Alumuni-Sportlight"
+    class="w-full h-48 object-cover"
+  />
+  <div class="p-6">
+    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
+      Alumuni-Sportlight
+    </h3>
+    <p class="text-gray-800">
+      Gain insights, inspiration, and reconnect with fellow alumni.
+    </p>
+  </div>
+</div>
+<div
+  class="bg-red-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+>
+  <img
+    src="./assets/images/events/ODE-TO-CODE.jpg"
+    alt="ODE-TO-CODE"
+    class="w-full h-48 object-cover"
+  />
+  <div class="p-6">
+    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
+      ODE-TO-CODE.
+    </h3>
+    <p class="text-gray-800">
+      Coding competition and compete against some of the brightest minds and win exciting prizes.
+    </p>
+  </div>
+</div>
+<div
+  class="bg-yellow-100 rounded-xl shadow hover:shadow-md transition overflow-hidden"
+>
+  <img
+    src="./assets/images/events/OS-Workshop.jpg"
+    alt="OS-Workshop"
+    class="w-full h-48 object-cover"
+  />
+  <div class="p-6">
+    <h3 class="text-xl font-semibold mb-2 text-indigo-700">
+      OS Workskhop.
+    </h3>
+    <p class="text-gray-800">
+      Dive deep into the core of Operating Systems—processes, memory, and more!.
+    </p>
+  </div>
+</div>
         </div>
       </div>
     </section>
