--- a/members.html
+++ b/members.html
@@ -154,28 +154,84 @@
             </div>
           </div>
 
-          <!-- Member Card -->
-          <div
-            class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
-          >
-            <img
-              src="./assets/images/members/member3.jpg"
-              alt="Member 3"
-              class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
-            />
-            <h3 class="text-xl font-semibold text-blue-700">Rohan Das</h3>
-            <p class="text-gray-600">Technical Lead</p>
-            <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"
-                ><i class="fab fa-linkedin fa-lg"></i
-              ></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"
-                ><i class="fab fa-github fa-lg"></i
-              ></a>
-            </div>
-          </div>
-
           <!-- Add more members as needed -->
+          <div
+          class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
+        >
+          <img
+            src="./assets/images/members/member3.jpg"
+            alt="Member 3"
+            class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
+          />
+          <h3 class="text-xl font-semibold text-blue-700">Diya Patel</h3>
+          <p class="text-gray-600">Vice President</p>
+          <div class="mt-3 space-x-3">
+            <a href="#" class="text-blue-500 hover:text-blue-700"
+              ><i class="fab fa-linkedin fa-lg"></i
+            ></a>
+            <a href="#" class="text-gray-600 hover:text-gray-800"
+              ><i class="fab fa-github fa-lg"></i
+            ></a>
+          </div>
+        </div>
+        <div
+        class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
+      >
+        <img
+          src="./assets/images/members/member4.jpg"
+          alt="Member 4"
+          class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
+        />
+        <h3 class="text-xl font-semibold text-blue-700">Diya Patel</h3>
+        <p class="text-gray-600">Vice President</p>
+        <div class="mt-3 space-x-3">
+          <a href="#" class="text-blue-500 hover:text-blue-700"
+            ><i class="fab fa-linkedin fa-lg"></i
+          ></a>
+          <a href="#" class="text-gray-600 hover:text-gray-800"
+            ><i class="fab fa-github fa-lg"></i
+          ></a>
+        </div>
+      </div>
+      <div
+      class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
+    >
+      <img
+        src="./assets/images/members/member5.jpg"
+        alt="Member 5"
+        class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
+      />
+      <h3 class="text-xl font-semibold text-blue-700">Diya Patel</h3>
+      <p class="text-gray-600">Vice President</p>
+      <div class="mt-3 space-x-3">
+        <a href="#" class="text-blue-500 hover:text-blue-700"
+          ><i class="fab fa-linkedin fa-lg"></i
+        ></a>
+        <a href="#" class="text-gray-600 hover:text-gray-800"
+          ><i class="fab fa-github fa-lg"></i
+        ></a>
+      </div>
+    </div>
+    <div
+    class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
+  >
+    <img
+      src="./assets/images/members/member6.jpg"
+      alt="Member 6"
+      class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
+    />
+    <h3 class="text-xl font-semibold text-blue-700">Diya Patel</h3>
+    <p class="text-gray-600">Vice President</p>
+    <div class="mt-3 space-x-3">
+      <a href="#" class="text-blue-500 hover:text-blue-700"
+        ><i class="fab fa-linkedin fa-lg"></i
+      ></a>
+      <a href="#" class="text-gray-600 hover:text-gray-800"
+        ><i class="fab fa-github fa-lg"></i
+      ></a>
+    </div>
+  </div>
+
         </div>
       </div>
     </section>
