updated member pages

--- a/members.html
+++ b/members.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Members | ITIAN Club</title>
 
     <!-- Tailwind CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 
     <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
     <!-- Favicon -->
     <link rel="icon" href="./assets/images/favicon.ico" type="image/png" />
@@ -53,9 +48,7 @@
     <div id="navbar-placeholder"></div>
 
     <!-- Hero Section -->
-    <section
-      class="bg-gradient-to-r from-blue-50 to-blue-100 text-gray-900 py-20 text-center"
-    >
+    <section class="bg-gradient-to-r from-blue-50 to-blue-100 text-gray-900 py-20 text-center">
       <div class="max-w-4xl mx-auto px-4">
         <h1 class="text-5xl font-extrabold mb-4 text-blue-800">
           Meet the Team
@@ -73,35 +66,25 @@
         <h2 class="text-3xl font-bold text-center text-blue-800 mb-12">
           Faculty Advisors
         </h2>
-    <div class="grid gap-10 sm:grid-cols-2 justify-center">
-      <!-- Faculty Card 1 -->
-      <div
-        class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
-      >
-        <img
-          src="./assets/images/faculty/faculty1.jpg"
-          alt="Faculty 1"
-          class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
-        />
-        <h3 class="text-xl font-semibold text-blue-700">Dr. Kulvinder Singh Mann</h3>
-        <!-- <p class="text-gray-600"></p> -->
-        <p class="text-gray-500 text-sm mt-2">Professor & Head - Dept. of IT</p>
-      </div>
+        <div class="grid gap-10 sm:grid-cols-2 justify-center">
+          <!-- Faculty Card 1 -->
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/faculty/Dr.KSMann.png" alt="Faculty 1"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Dr. Kulvinder Singh Mann</h3>
+            <!-- <p class="text-gray-600"></p> -->
+            <p class="text-gray-500 text-sm mt-2">Professor & Head - Dept. of IT</p>
+          </div>
 
-      <!-- Faculty Card 2 -->
-      <div
-        class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
-      >
-        <img
-          src="./assets/images/faculty/faculty2.jpg"
-          alt="Faculty 2"
-          class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
-        />
-        <h3 class="text-xl font-semibold text-blue-700">Er. Harminder Kaur</h3>
-        <!-- <p class="text-gray-600">Faculty Mentor</p> -->
-        <p class="text-gray-500 text-sm mt-2">Faculty Incharge</p>
-      </div>
-    </div>
+          <!-- Faculty Card 2 -->
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/faculty/Harminder.jpg" alt="Faculty 2"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Er. Harminder Kaur</h3>
+            <!-- <p class="text-gray-600">Faculty Mentor</p> -->
+            <p class="text-gray-500 text-sm mt-2">Faculty Incharge</p>
+          </div>
+        </div>
     </section>
 
     <!-- Members Section -->
@@ -113,124 +96,140 @@
 
         <div class="grid gap-10 sm:grid-cols-2 lg:grid-cols-3">
           <!-- Member Card -->
-          <div
-            class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
-          >
-            <img
-              src="./assets/images/members/member1.jpg"
-              alt="Member 1"
-              class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
-            />
-            <h3 class="text-xl font-semibold text-blue-700">Aarav Sharma</h3>
-            <p class="text-gray-600">President</p>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/ashmeet.jpg" alt="Member 1"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Ashmeet Kaur</h3>
+            <p class="text-gray-600">Convener</p>
             <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"
-                ><i class="fab fa-linkedin fa-lg"></i
-              ></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"
-                ><i class="fab fa-github fa-lg"></i
-              ></a>
+              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
 
           <!-- Member Card -->
-          <div
-            class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
-          >
-            <img
-              src="./assets/images/members/member2.jpg"
-              alt="Member 2"
-              class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
-            />
-            <h3 class="text-xl font-semibold text-blue-700">Diya Patel</h3>
-            <p class="text-gray-600">Vice President</p>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/simarjot.jpg" alt="Member 2"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Simarjot Singh</h3>
+            <p class="text-gray-600">Co-Convener</p>
             <div class="mt-3 space-x-3">
-              <a href="#" class="text-blue-500 hover:text-blue-700"
-                ><i class="fab fa-linkedin fa-lg"></i
-              ></a>
-              <a href="#" class="text-gray-600 hover:text-gray-800"
-                ><i class="fab fa-github fa-lg"></i
-              ></a>
+              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
             </div>
           </div>
 
           <!-- Add more members as needed -->
-          <div
-          class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
-        >
-          <img
-            src="./assets/images/members/member3.jpg"
-            alt="Member 3"
-            class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
-          />
-          <h3 class="text-xl font-semibold text-blue-700">Diya Patel</h3>
-          <p class="text-gray-600">Vice President</p>
-          <div class="mt-3 space-x-3">
-            <a href="#" class="text-blue-500 hover:text-blue-700"
-              ><i class="fab fa-linkedin fa-lg"></i
-            ></a>
-            <a href="#" class="text-gray-600 hover:text-gray-800"
-              ><i class="fab fa-github fa-lg"></i
-            ></a>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/abhishek.png" alt="Member 3"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Abhishek</h3>
+            <p class="text-gray-600">Public Relations Officer</p>
+            <div class="mt-3 space-x-3">
+              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
           </div>
-        </div>
-        <div
-        class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
-      >
-        <img
-          src="./assets/images/members/member4.jpg"
-          alt="Member 4"
-          class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
-        />
-        <h3 class="text-xl font-semibold text-blue-700">Diya Patel</h3>
-        <p class="text-gray-600">Vice President</p>
-        <div class="mt-3 space-x-3">
-          <a href="#" class="text-blue-500 hover:text-blue-700"
-            ><i class="fab fa-linkedin fa-lg"></i
-          ></a>
-          <a href="#" class="text-gray-600 hover:text-gray-800"
-            ><i class="fab fa-github fa-lg"></i
-          ></a>
-        </div>
-      </div>
-      <div
-      class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
-    >
-      <img
-        src="./assets/images/members/member5.jpg"
-        alt="Member 5"
-        class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
-      />
-      <h3 class="text-xl font-semibold text-blue-700">Diya Patel</h3>
-      <p class="text-gray-600">Vice President</p>
-      <div class="mt-3 space-x-3">
-        <a href="#" class="text-blue-500 hover:text-blue-700"
-          ><i class="fab fa-linkedin fa-lg"></i
-        ></a>
-        <a href="#" class="text-gray-600 hover:text-gray-800"
-          ><i class="fab fa-github fa-lg"></i
-        ></a>
-      </div>
-    </div>
-    <div
-    class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6"
-  >
-    <img
-      src="./assets/images/members/member6.jpg"
-      alt="Member 6"
-      class="w-32 h-32 mx-auto rounded-full object-cover mb-4"
-    />
-    <h3 class="text-xl font-semibold text-blue-700">Diya Patel</h3>
-    <p class="text-gray-600">Vice President</p>
-    <div class="mt-3 space-x-3">
-      <a href="#" class="text-blue-500 hover:text-blue-700"
-        ><i class="fab fa-linkedin fa-lg"></i
-      ></a>
-      <a href="#" class="text-gray-600 hover:text-gray-800"
-        ><i class="fab fa-github fa-lg"></i
-      ></a>
-    </div>
-  </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/harsh.jpg" alt="Member 4"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Harsh Kapoor</h3>
+            <p class="text-gray-600">Secretary</p>
+            <div class="mt-3 space-x-3">
+              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/arshdeep.jpg" alt="Member 5"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Arshdeep Kaur</h3>
+            <p class="text-gray-600">Human Resources</p>
+            <div class="mt-3 space-x-3">
+              <a href="https://www.linkedin.com/in/arshdeep-kaur-8b0a73260" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/Arsh-deep2005" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/priyanshu.jpg" alt="Member 6"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Priyanshu</h3>
+            <p class="text-gray-600">Creative Head</p>
+            <div class="mt-3 space-x-3">
+              <a href="http://www.linkedin.com/in/priyanshu936" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/secuRaven" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/parkhi.jpg" alt="Member 6"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Parkhi Gupta</h3>
+            <p class="text-gray-600">Content Head</p>
+            <div class="mt-3 space-x-3">
+              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/saarvi.jpg" alt="Member 6"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Saarvi Sachdeva</h3>
+            <p class="text-gray-600">Event Management Head</p>
+            <div class="mt-3 space-x-3">
+              <a href="https://www.linkedin.com/in/saarvi-sachdeva-677800287" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/saarvi35" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/taran.jpg" alt="Member 6"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Taranpreet Kaur</h3>
+            <p class="text-gray-600">Social Media Head</p>
+            <div class="mt-3 space-x-3">
+              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/brahamjot.jpg" alt="Member 6"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Brahamjot Singh</h3>
+            <p class="text-gray-600">Technical Head</p>
+            <div class="mt-3 space-x-3">
+              <a href="https://linkedin.com/in/brahamjotsingh" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/brahamjot04" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/jasmeet.png" alt="Member 6"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Jasmeet Kaur</h3>
+            <p class="text-gray-600">Database Head</p>
+            <div class="mt-3 space-x-3">
+              <a href="https://www.linkedin.com/in/jasmeet-kaur-3243b3312" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/jasmeetkaur73" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/jasnoor.jpg" alt="Member 6"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Jasnoor Kaur</h3>
+            <p class="text-gray-600">Software Development Head</p>
+            <div class="mt-3 space-x-3">
+              <a href="https://www.linkedin.com/in/jasnoor-kaur-8b7226319" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="https://github.com/jasnooraulakh1" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
+          <div class="bg-white rounded-xl shadow hover:shadow-lg transition text-center p-6">
+            <img src="./assets/images/members/harman.jpg" alt="Member 6"
+              class="w-32 h-32 mx-auto rounded-full object-cover mb-4" />
+            <h3 class="text-xl font-semibold text-blue-700">Harmanpreet Singh</h3>
+            <p class="text-gray-600">Discipline Head</p>
+            <div class="mt-3 space-x-3">
+              <a href="#" class="text-blue-500 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+              <a href="#" class="text-gray-600 hover:text-gray-800"><i class="fab fa-github fa-lg"></i></a>
+            </div>
+          </div>
 
         </div>
       </div>
@@ -261,4 +260,5 @@
       });
     </script>
   </body>
+
 </html>
